--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # From https://github.com/github/gitignore/blob/master/Gradle.gitignore
 .gradle
-/build/
+build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -43,6 +43,7 @@ hs_err_pid*
 .idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files:
+.idea/
 .idea/dataSources.ids
 .idea/dataSources.xml
 .idea/dataSources.local.xml
