--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ gradle-app.setting
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.settings/a
+app/.settings
+settings.json
 
 
 # From https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
